add progress bar

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <div class="container">
       <img class="resize" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/2000px-Star_Wars_Logo.svg.png" alt="StarWarsLogo">
     </div>
+
+    <h1>Welcome to the Star Wars Quiz </h1>
+     <p> You are about to embark on a challenging quiz </p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
